<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_120"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/tv_signOut"
            style="@style/text_style_18_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_out_text" />

        <View
            android:background="@color/line_divide_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/text_style_18_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="@dimen/dp_45"
                android:text="@string/login_out_cancel_text" />

            <View
                android:background="@color/line_border"
                android:layout_width="@dimen/dp_0.5"
                android:layout_height="match_parent"></View>

            <TextView
                android:id="@+id/tv_confirm"
                style="@style/text_style_18_4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="@dimen/dp_45"
                android:text="@string/login_out_ok_text" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>