<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_1"
    android:orientation="vertical">

    <com.ifenqu.app.widget.CommonTitleView
        android:id="@+id/comm_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_161"
        android:background="@drawable/about_bg2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/login_logo_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_privacy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/about_bg"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            style="@style/text_style_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/about_privacy" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/norrow_to_right_icon" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/line_border"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15" />

    <RelativeLayout
        android:id="@+id/rl_announce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/about_bg"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            style="@style/text_style_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/about_announce" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/norrow_to_right_icon" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/line_border"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15" />

    <RelativeLayout
        android:id="@+id/rl_safety_announce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/about_bg"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            style="@style/text_style_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/about_safety_announce" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/norrow_to_right_icon" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/line_border"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15" />

    <RelativeLayout
        android:id="@+id/rl_return_privacy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/about_bg"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            style="@style/text_style_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/about_return_privacy" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/norrow_to_right_icon" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/line_border"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/rl_phone"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/about_bg"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            style="@style/text_style_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/about_phone" />

        <TextView
            android:id="@+id/tv_call"
            style="@style/text_style_14_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:text="@string/about_phone1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/line_border"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/rl_cooperation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center_vertical"
        android:background="@color/about_bg"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15">

        <TextView
            style="@style/text_style_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_cooperation" />

        <TextView
            style="@style/text_style_14_6"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/about_cooperation1" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/line_border" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/rl_current_version"
            style="@style/text_style_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/about_current_version" />
    </RelativeLayout>


</LinearLayout>